// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Amp Consent Banner Container should correctly render cookie banner - LTR layout 1`] = `
.emotion-0 {
  font-family: ReithSans,Helvetica,Arial,sans-serif;
  font-weight: 400;
  font-style: normal;
  background-color: #323232;
  padding: 1rem 0.5rem;
}

@media (min-width:25rem) {
  .emotion-0 {
    padding: 1rem;
  }
}

.emotion-2 {
  max-width: 80rem;
  margin: 0 auto;
}

.emotion-2::after {
  content: '\\0020';
  display: block;
  height: 0;
  clear: both;
  overflow: hidden;
  visibility: hidden;
}

.emotion-4 {
  font-size: 1.125rem;
  line-height: 1.375rem;
  color: #FFFFFF;
  font-weight: 700;
  padding: 0;
  margin: 0;
}

@media (min-width:20rem) and (max-width:37.4375rem) {
  .emotion-4 {
    font-size: 1.125rem;
    line-height: 1.375rem;
  }
}

@media (min-width:37.5rem) {
  .emotion-4 {
    font-size: 1.25rem;
    line-height: 1.5rem;
  }
}

@media (min-width:37.5rem) {
  .emotion-4 {
    float: left;
    margin-right: 3.5%;
    width: 22%;
  }
}

.emotion-6 {
  font-size: 0.9375rem;
  line-height: 1.125rem;
  color: #BEBEBE;
}

@media (min-width:20rem) and (max-width:37.4375rem) {
  .emotion-6 {
    font-size: 0.9375rem;
    line-height: 1.125rem;
  }
}

@media (min-width:37.5rem) {
  .emotion-6 {
    font-size: 0.875rem;
    line-height: 1.125rem;
  }
}

@media (min-width:37.5rem) {
  .emotion-6 {
    margin: 0;
    float: left;
    width: 53%;
  }
}

.emotion-6 a {
  color: #F6A21D;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-6 a:focus,
.emotion-6 a:hover {
  color: #FFFFFF;
}

.emotion-8 {
  font-size: 0.9375rem;
  line-height: 1.125rem;
  color: #F6A21D;
  font-weight: 600;
  padding: 0;
  margin: 0;
  list-style-type: none;
}

@media (min-width:20rem) and (max-width:37.4375rem) {
  .emotion-8 {
    font-size: 0.9375rem;
    line-height: 1.125rem;
  }
}

@media (min-width:37.5rem) {
  .emotion-8 {
    font-size: 0.875rem;
    line-height: 1.125rem;
  }
}

.emotion-8 li+li {
  padding-top: 0.5rem;
}

@media (min-width:37.5rem) {
  .emotion-8 {
    width: 18%;
    float: right;
  }
}

.emotion-10 button {
  font-size: 1.125rem;
  line-height: 1.375rem;
  color: #F6A21D;
  font-weight: 700;
  background: none;
  border: none;
  padding: 0;
  margin: 0;
  cursor: pointer;
}

@media (min-width:20rem) and (max-width:37.4375rem) {
  .emotion-10 button {
    font-size: 1.125rem;
    line-height: 1.375rem;
  }
}

@media (min-width:37.5rem) {
  .emotion-10 button {
    font-size: 1.25rem;
    line-height: 1.5rem;
  }
}

.emotion-10 button:focus,
.emotion-10 button:hover {
  color: #FFFFFF;
}

.emotion-10 a {
  color: #F6A21D;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-10 a:focus,
.emotion-10 a:hover {
  color: #FFFFFF;
}

<div>
  <div
    class="emotion-0 emotion-1"
    dir="ltr"
    hidden=""
    id="promptId"
  >
    <div
      class="emotion-2 emotion-3"
      dir="ltr"
    >
      <h2
        class="emotion-4 emotion-5"
        dir="ltr"
      >
        Let us know you agree to cookies
      </h2>
      <p
        class="emotion-6 emotion-7"
        dir="ltr"
      >
        We and our partners use technologies, such as 
        <a
          href="https://www.bbc.co.uk/usingthebbc/cookies/what-do-i-need-to-know-about-cookies/"
        >
          cookies
        </a>
        , and collect browsing data to give you the best online experience and to personalise the content and advertising shown to you. Please let us know if you agree.
      </p>
      <ul
        class="emotion-8 emotion-9"
        dir="ltr"
      >
        <li
          class="emotion-10 emotion-11"
          dir="ltr"
        >
          <button
            data-cookie-banner="accept"
            on="tap:parentId.accept"
            type="button"
          >
            Yes, I agree
          </button>
        </li>
        <li
          class="emotion-10 emotion-11"
          dir="ltr"
        >
          <a
            data-cookie-banner="reject"
            href="https://www.bbc.co.uk/usingthebbc/cookies/how-can-i-change-my-bbc-cookie-settings/"
            on="tap:parentId.reject"
          >
            No, take me to settings
          </a>
        </li>
      </ul>
    </div>
  </div>
</div>
`;

exports[`Amp Consent Banner Container should correctly render cookie banner - RTL layout 1`] = `
.emotion-0 {
  font-family: "BBC Reith Qalam",Arial,Verdana,Geneva,Helvetica,sans-serif;
  font-weight: 400;
  font-style: normal;
  background-color: #323232;
  padding: 1rem 0.5rem;
}

@media (min-width:25rem) {
  .emotion-0 {
    padding: 1rem;
  }
}

.emotion-2 {
  max-width: 80rem;
  margin: 0 auto;
}

.emotion-2::after {
  content: '\\0020';
  display: block;
  height: 0;
  clear: both;
  overflow: hidden;
  visibility: hidden;
}

.emotion-4 {
  font-size: 1.125rem;
  line-height: 1.625rem;
  color: #FFFFFF;
  font-weight: 700;
  padding: 0;
  margin: 0;
}

@media (min-width:20rem) and (max-width:37.4375rem) {
  .emotion-4 {
    font-size: 1.125rem;
    line-height: 1.625rem;
  }
}

@media (min-width:37.5rem) {
  .emotion-4 {
    font-size: 1.25rem;
    line-height: 1.75rem;
  }
}

@media (min-width:37.5rem) {
  .emotion-4 {
    float: right;
    margin-left: 3.5%;
    width: 22%;
  }
}

.emotion-6 {
  font-size: 0.9375rem;
  line-height: 1.375rem;
  color: #BEBEBE;
}

@media (min-width:20rem) and (max-width:37.4375rem) {
  .emotion-6 {
    font-size: 0.9375rem;
    line-height: 1.375rem;
  }
}

@media (min-width:37.5rem) {
  .emotion-6 {
    font-size: 0.875rem;
    line-height: 1.375rem;
  }
}

@media (min-width:37.5rem) {
  .emotion-6 {
    margin: 0;
    float: right;
    width: 53%;
  }
}

.emotion-6 a {
  color: #F6A21D;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-6 a:focus,
.emotion-6 a:hover {
  color: #FFFFFF;
}

.emotion-8 {
  font-size: 0.9375rem;
  line-height: 1.375rem;
  color: #F6A21D;
  font-weight: 600;
  padding: 0;
  margin: 0;
  list-style-type: none;
}

@media (min-width:20rem) and (max-width:37.4375rem) {
  .emotion-8 {
    font-size: 0.9375rem;
    line-height: 1.375rem;
  }
}

@media (min-width:37.5rem) {
  .emotion-8 {
    font-size: 0.875rem;
    line-height: 1.375rem;
  }
}

.emotion-8 li+li {
  padding-top: 0.5rem;
}

@media (min-width:37.5rem) {
  .emotion-8 {
    width: 18%;
    float: left;
  }
}

.emotion-10 button {
  font-size: 1.125rem;
  line-height: 1.625rem;
  color: #F6A21D;
  font-weight: 700;
  background: none;
  border: none;
  padding: 0;
  margin: 0;
  cursor: pointer;
}

@media (min-width:20rem) and (max-width:37.4375rem) {
  .emotion-10 button {
    font-size: 1.125rem;
    line-height: 1.625rem;
  }
}

@media (min-width:37.5rem) {
  .emotion-10 button {
    font-size: 1.25rem;
    line-height: 1.75rem;
  }
}

.emotion-10 button:focus,
.emotion-10 button:hover {
  color: #FFFFFF;
}

.emotion-10 a {
  color: #F6A21D;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-10 a:focus,
.emotion-10 a:hover {
  color: #FFFFFF;
}

<div>
  <div
    class="emotion-0 emotion-1"
    dir="rtl"
    hidden=""
    id="promptId"
  >
    <div
      class="emotion-2 emotion-3"
      dir="rtl"
    >
      <h2
        class="emotion-4 emotion-5"
        dir="rtl"
      >
        أخبرنا عما إذا كنت توافق على تحميل الكوكيز
      </h2>
      <p
        class="emotion-6 emotion-7"
        dir="rtl"
      >
        نستخدم نحن وشركاؤنا تقنيات مثل 
        <a
          href="https://www.bbc.co.uk/usingthebbc/cookies/what-do-i-need-to-know-about-cookies/"
        >
          ملفات الارتباط
        </a>
        ، كما نقوم بجمع معلومات خاصة بالتصفح من أجل توفير أفضل خدمة رقمية ولجعل المحتوى والاعلانات، الموجهة إليك، شخصية. الرجاء إعلامنا إذا كنت موافقا على ذلك.
      </p>
      <ul
        class="emotion-8 emotion-9"
        dir="rtl"
      >
        <li
          class="emotion-10 emotion-11"
          dir="rtl"
        >
          <button
            data-cookie-banner="accept"
            on="tap:parentId.accept"
            type="button"
          >
            نعم، موافق
          </button>
        </li>
        <li
          class="emotion-10 emotion-11"
          dir="rtl"
        >
          <a
            data-cookie-banner="reject"
            href="https://www.bbc.co.uk/usingthebbc/cookies/how-can-i-change-my-bbc-cookie-settings/"
            on="tap:parentId.reject"
          >
            كلا، أعدني إلى الإعدادات
          </a>
        </li>
      </ul>
    </div>
  </div>
</div>
`;

exports[`Amp Consent Banner Container should correctly render privacy banner - LTR layout 1`] = `
.emotion-0 {
  font-family: ReithSans,Helvetica,Arial,sans-serif;
  font-weight: 400;
  font-style: normal;
  background-color: #323232;
  padding: 1rem 0.5rem;
}

@media (min-width:25rem) {
  .emotion-0 {
    padding: 1rem;
  }
}

.emotion-2 {
  max-width: 80rem;
  margin: 0 auto;
}

.emotion-2::after {
  content: '\\0020';
  display: block;
  height: 0;
  clear: both;
  overflow: hidden;
  visibility: hidden;
}

.emotion-4 {
  font-size: 1.125rem;
  line-height: 1.375rem;
  color: #FFFFFF;
  font-weight: 700;
  padding: 0;
  margin: 0;
}

@media (min-width:20rem) and (max-width:37.4375rem) {
  .emotion-4 {
    font-size: 1.125rem;
    line-height: 1.375rem;
  }
}

@media (min-width:37.5rem) {
  .emotion-4 {
    font-size: 1.25rem;
    line-height: 1.5rem;
  }
}

@media (min-width:37.5rem) {
  .emotion-4 {
    float: left;
    margin-right: 3.5%;
    width: 22%;
  }
}

.emotion-6 {
  font-size: 0.9375rem;
  line-height: 1.125rem;
  color: #BEBEBE;
}

@media (min-width:20rem) and (max-width:37.4375rem) {
  .emotion-6 {
    font-size: 0.9375rem;
    line-height: 1.125rem;
  }
}

@media (min-width:37.5rem) {
  .emotion-6 {
    font-size: 0.875rem;
    line-height: 1.125rem;
  }
}

@media (min-width:37.5rem) {
  .emotion-6 {
    margin: 0;
    float: left;
    width: 53%;
  }
}

.emotion-6 a {
  color: #F6A21D;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-6 a:focus,
.emotion-6 a:hover {
  color: #FFFFFF;
}

.emotion-8 {
  font-size: 0.9375rem;
  line-height: 1.125rem;
  color: #F6A21D;
  font-weight: 600;
  padding: 0;
  margin: 0;
  list-style-type: none;
}

@media (min-width:20rem) and (max-width:37.4375rem) {
  .emotion-8 {
    font-size: 0.9375rem;
    line-height: 1.125rem;
  }
}

@media (min-width:37.5rem) {
  .emotion-8 {
    font-size: 0.875rem;
    line-height: 1.125rem;
  }
}

.emotion-8 li+li {
  padding-top: 0.5rem;
}

@media (min-width:37.5rem) {
  .emotion-8 {
    width: 18%;
    float: right;
  }
}

.emotion-10 button {
  font-size: 1.125rem;
  line-height: 1.375rem;
  color: #F6A21D;
  font-weight: 700;
  background: none;
  border: none;
  padding: 0;
  margin: 0;
  cursor: pointer;
}

@media (min-width:20rem) and (max-width:37.4375rem) {
  .emotion-10 button {
    font-size: 1.125rem;
    line-height: 1.375rem;
  }
}

@media (min-width:37.5rem) {
  .emotion-10 button {
    font-size: 1.25rem;
    line-height: 1.5rem;
  }
}

.emotion-10 button:focus,
.emotion-10 button:hover {
  color: #FFFFFF;
}

.emotion-10 a {
  color: #F6A21D;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-10 a:focus,
.emotion-10 a:hover {
  color: #FFFFFF;
}

<div>
  <div
    class="emotion-0 emotion-1"
    dir="ltr"
    hidden=""
    id="promptId"
  >
    <div
      class="emotion-2 emotion-3"
      dir="ltr"
    >
      <h2
        class="emotion-4 emotion-5"
        dir="ltr"
      >
        We've updated our Privacy and Cookies Policy
      </h2>
      <p
        class="emotion-6 emotion-7"
        dir="ltr"
      >
        We've made some important changes to our Privacy and Cookies Policy and we want you to know what this means for you and your data.
      </p>
      <ul
        class="emotion-8 emotion-9"
        dir="ltr"
      >
        <li
          class="emotion-10 emotion-11"
          dir="ltr"
        >
          <button
            on="tap:cookieId.show, privacyId.hide"
            type="button"
          >
            OK
          </button>
        </li>
        <li
          class="emotion-10 emotion-11"
          dir="ltr"
        >
          <a
            href="https://www.bbc.co.uk/usingthebbc/your-data-matters"
            on="tap:cookieId.show, privacyId.hide"
          >
            Find out what's changed
          </a>
        </li>
      </ul>
    </div>
  </div>
</div>
`;

exports[`Amp Consent Banner Container should correctly render privacy banner - RTL layout 1`] = `
.emotion-0 {
  font-family: "BBC Reith Qalam",Arial,Verdana,Geneva,Helvetica,sans-serif;
  font-weight: 400;
  font-style: normal;
  background-color: #323232;
  padding: 1rem 0.5rem;
}

@media (min-width:25rem) {
  .emotion-0 {
    padding: 1rem;
  }
}

.emotion-2 {
  max-width: 80rem;
  margin: 0 auto;
}

.emotion-2::after {
  content: '\\0020';
  display: block;
  height: 0;
  clear: both;
  overflow: hidden;
  visibility: hidden;
}

.emotion-4 {
  font-size: 1.125rem;
  line-height: 1.625rem;
  color: #FFFFFF;
  font-weight: 700;
  padding: 0;
  margin: 0;
}

@media (min-width:20rem) and (max-width:37.4375rem) {
  .emotion-4 {
    font-size: 1.125rem;
    line-height: 1.625rem;
  }
}

@media (min-width:37.5rem) {
  .emotion-4 {
    font-size: 1.25rem;
    line-height: 1.75rem;
  }
}

@media (min-width:37.5rem) {
  .emotion-4 {
    float: right;
    margin-left: 3.5%;
    width: 22%;
  }
}

.emotion-6 {
  font-size: 0.9375rem;
  line-height: 1.375rem;
  color: #BEBEBE;
}

@media (min-width:20rem) and (max-width:37.4375rem) {
  .emotion-6 {
    font-size: 0.9375rem;
    line-height: 1.375rem;
  }
}

@media (min-width:37.5rem) {
  .emotion-6 {
    font-size: 0.875rem;
    line-height: 1.375rem;
  }
}

@media (min-width:37.5rem) {
  .emotion-6 {
    margin: 0;
    float: right;
    width: 53%;
  }
}

.emotion-6 a {
  color: #F6A21D;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-6 a:focus,
.emotion-6 a:hover {
  color: #FFFFFF;
}

.emotion-8 {
  font-size: 0.9375rem;
  line-height: 1.375rem;
  color: #F6A21D;
  font-weight: 600;
  padding: 0;
  margin: 0;
  list-style-type: none;
}

@media (min-width:20rem) and (max-width:37.4375rem) {
  .emotion-8 {
    font-size: 0.9375rem;
    line-height: 1.375rem;
  }
}

@media (min-width:37.5rem) {
  .emotion-8 {
    font-size: 0.875rem;
    line-height: 1.375rem;
  }
}

.emotion-8 li+li {
  padding-top: 0.5rem;
}

@media (min-width:37.5rem) {
  .emotion-8 {
    width: 18%;
    float: left;
  }
}

.emotion-10 button {
  font-size: 1.125rem;
  line-height: 1.625rem;
  color: #F6A21D;
  font-weight: 700;
  background: none;
  border: none;
  padding: 0;
  margin: 0;
  cursor: pointer;
}

@media (min-width:20rem) and (max-width:37.4375rem) {
  .emotion-10 button {
    font-size: 1.125rem;
    line-height: 1.625rem;
  }
}

@media (min-width:37.5rem) {
  .emotion-10 button {
    font-size: 1.25rem;
    line-height: 1.75rem;
  }
}

.emotion-10 button:focus,
.emotion-10 button:hover {
  color: #FFFFFF;
}

.emotion-10 a {
  color: #F6A21D;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-10 a:focus,
.emotion-10 a:hover {
  color: #FFFFFF;
}

<div>
  <div
    class="emotion-0 emotion-1"
    dir="rtl"
    hidden=""
    id="promptId"
  >
    <div
      class="emotion-2 emotion-3"
      dir="rtl"
    >
      <h2
        class="emotion-4 emotion-5"
        dir="rtl"
      >
        لقد حدّثنا سياستنا المتعلقة بالخصوصية وبالشروط الخاصة بملفات الارتباط Cookies
      </h2>
      <p
        class="emotion-6 emotion-7"
        dir="rtl"
      >
        لقد أدخلنا تغييرات مهمة على سياستنا المتعلقة بالخصوصية وعلى الشروط الخاصة بملفات الارتباط Cookies، ويهمنا أن تكونوا ملمين بما قد تعني هذه التغييرات بالنسبة لكم ولبياناتكم
      </p>
      <ul
        class="emotion-8 emotion-9"
        dir="rtl"
      >
        <li
          class="emotion-10 emotion-11"
          dir="rtl"
        >
          <button
            on="tap:cookieId.show, privacyId.hide"
            type="button"
          >
            موافق
          </button>
        </li>
        <li
          class="emotion-10 emotion-11"
          dir="rtl"
        >
          <a
            href="https://www.bbc.co.uk/usingthebbc/your-data-matters"
            on="tap:cookieId.show, privacyId.hide"
          >
            إطلع على التغييرات
          </a>
        </li>
      </ul>
    </div>
  </div>
</div>
`;
